--- a/manifest.json
+++ b/manifest.json
@@ -18,6 +18,6 @@
 	"permissions": [
 		"storage",
 		"webview",
-		{"socket": ["tcp-connect:*:80", "tcp-connect:*:443", "udp-send-to", "tcp-listen::8123"]}
+		{"socket": ["tcp-connect", "udp-send-to", "tcp-listen::8123"]}
 	]
 }
