--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "UProxyPicker",
+  "name": "UProxyExt",
   "description": "Alpha: Ubiquitous Chrome Proxy Picker",
   "version": "0.0.1",
   "icons": {
@@ -11,7 +11,7 @@
 
   "background": {
     "persistent": true,
-    "scripts": ["js/plumbing.js"]
+    "scripts": ["js/plumbing.js", "js/unfreedom.js", "js/background.js"]
   },
 
   "permissions": [
