send oauth credentials to app
using https://github.com/borismus/oauth2-extensions (added as a git submodule)

app now automatically connects to Google Talk upon receiving credentials and
displays roster

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "app/js/freedom"]
 	path = app/js/freedom
 	url = https://github.com/UWNetworksLab/freedom
+[submodule "extension/submodules/oauth2"]
+	path = extension/submodules/oauth2
+	url = https://github.com/borismus/oauth2-extensions
