--- a/chrome/app/manifest.json
+++ b/chrome/app/manifest.json
@@ -10,7 +10,7 @@
   },
   "app": {
     "background": {
-      "scripts": ["js/plumbing.js", "js/background.js"]
+      "scripts": ["js/view_oauth.js", "js/plumbing.js", "js/background.js"]
     }
   },
   "permissions": [
