--- a/firefox/package.json
+++ b/firefox/package.json
@@ -3,7 +3,8 @@
   "fullName": "UProxy Firefox Extension",
   "id": "UProxyFirefox@UniversityOfWashington",
   "description": "Alpha: Ubiquitous Firefox Proxy Picker",
-  "icon":"chrome/skin/uproxy-128.png",
+  "icon":"submodules/uproxy-common/images/uproxy-128.png",
+  "dependencies": ["toolbarbutton", "addon-sdk"],
   "author": "",
   "license": "",
   "version": "0.0.1"
