- Add Oauth module. - Change popup to reflect Chrome changes to popup. - Add a freedom shim for communicating to freedom.

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "firefox/data/submodules/uproxy-common"]
 	path = firefox/data/submodules/uproxy-common
 	url = git@github.com:UWNetworksLab/uproxy-common.git
+[submodule "firefox/data/submodules/oauth2"]
+	path = firefox/data/submodules/oauth2
+	url = https://github.com/borismus/oauth2-extensions
