--- a/chrome/extension/bower.json
+++ b/chrome/extension/bower.json
@@ -3,8 +3,10 @@
   "version": "0.0.1",
   "dependencies": {
     "angular": "~1.0.7",
+    "angular-lodash": "https://github.com/cabrel/angular-lodash.git",
     "bootstrap-sass": "~2.3.1",
     "jsonpatch": "~v1.0.0-rc1",
+    "lodash": "~1.3.1",
     "oauth2-extensions": "https://github.com/borismus/oauth2-extensions.git"
   },
   "devDependencies": {
