try using https rather than git url of pathfinder submodule
"git submodule update" gives this otherwise:

Cloning into 'firefox/packages/pathfinder'...
Permission denied (publickey).
fatal: Could not read from remote repository.

Please make sure you have the correct access rights
and the repository exists.
Clone of 'git@github.com:erikvold/addon-pathfinder.git' into submodule path 'firefox/packages/pathfinder' failed

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,5 +13,5 @@
 	url = https://github.com/borismus/oauth2-extensions
 [submodule "firefox/packages/pathfinder"]
 	path = firefox/packages/pathfinder
-	url = git@github.com:erikvold/addon-pathfinder.git
+	url = https://github.com/erikvold/addon-pathfinder.git
 	branch = master
