fixed order of loading for app/extension. Added comments. added result message for when extension connects to app.

--- a/chrome/app/manifest.json
+++ b/chrome/app/manifest.json
@@ -10,7 +10,12 @@
   },
   "app": {
     "background": {
-      "scripts": ["js/view_oauth.js", "js/socket_chrome.js", "js/storage_chrome.js", "js/plumbing.js", "js/background.js"]
+      "scripts": [
+        "js/view_oauth.js",
+        "js/socket_chrome.js",
+        "js/storage_chrome.js",
+        "js/plumbing.js",
+        "js/background.js"]
     }
   },
   "permissions": [
