--- a/chrome/extension/bower.json
+++ b/chrome/extension/bower.json
@@ -6,7 +6,7 @@
     "angular-lodash": "https://github.com/cabrel/angular-lodash.git",
     "bootstrap-sass": "~2.3.1",
     "jsonpatch": "~v1.0.0-rc1",
-    "lodash": "~1.3.1",
+    "lodash": "~1.3.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
