--- a/.gitmodules
+++ b/.gitmodules
@@ -17,3 +17,6 @@
 [submodule "firefox/packages/pathfinder"]
 	path = firefox/packages/pathfinder
 	url = https://github.com/Paul-E/addon-pathfinder.git
+[submodule "common/backend/submodules/freedom"]
+	path = common/backend/submodules/freedom
+	url = git@github.com:UWNetworksLab/freedom.git
