Finished migrating away from uproxy-common

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-yuidoc": "~0.4.0",
     "grunt-contrib-uglify": "~0.2.2",
-    "grunt-contrib-copy": "~0.4.1"
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-spawn": "~1.0.41"
   },
   "scripts": {
     "test": "grunt --verbose"
