--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "grunt-contrib-yuidoc": "~0.4.0",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-copy": "~0.4.1",
-    "grunt-spawn": "~1.0.41"
+    "grunt-spawn": "~1.0.41",
+    "grunt-shell": "~0.3.1"
   },
   "scripts": {
     "test": "grunt --verbose"
