Removing old files, adding grunt watch

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-spawn": "~1.0.41",
-    "grunt-shell": "~0.3.1"
+    "grunt-shell": "~0.3.1",
+    "grunt-contrib-watch": "~0.5.3"
   },
   "scripts": {
     "test": "grunt --verbose"
