--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "grunt-contrib-copy": "~0.4.1",
     "grunt-spawn": "~1.0.41",
     "grunt-shell": "~0.3.1",
-    "grunt-contrib-watch": "~0.5.3"
+    "grunt-contrib-watch": "~0.5.3",
+    "minimatch": "~0.2.12",
+    "glob": "~3.2.6"
   },
   "scripts": {
     "test": "grunt --verbose"
