--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,5 @@ node_modules
 chrome/app/common
 chrome/extension/src/common
 common/ui/bower_components
+firefox/data/common/
 firefox/data/scripts/dependencies.js
