--- a/common/ui/bower.json
+++ b/common/ui/bower.json
@@ -2,8 +2,9 @@
   "name": "uproxy-chrome-extension",
   "version": "0.0.1",
   "dependencies": {
-    "angular": "~1.0.7",
+    "angular": "http://code.angularjs.org/1.1.5/",
     "angular-lodash": "https://github.com/cabrel/angular-lodash.git",
+    "angular-animate": "1.2.0-rc.2",
     "bootstrap-sass": "~2.3.1",
     "jsonpatch": "~v1.0.0-rc1",
     "lodash": "~1.3.1"
