--- a/chrome/extension/src/manifest.json
+++ b/chrome/extension/src/manifest.json
@@ -13,6 +13,7 @@
     "persistent": true,
     "scripts": [
       "scripts/freedom_connector.js",
+      "common/ui/scripts/ui.js",
       "common/ui/bower_components/json-patch/jsonpatch.js",
       "scripts/proxy-config.js",
       "scripts/background.js"
