Generic XMPP in progress

--- a/chrome/app/manifest.json
+++ b/chrome/app/manifest.json
@@ -14,6 +14,7 @@
         "js/manual_dialog.js",
         "js/auth_google.js",
         "js/auth_facebook.js",
+        "js/auth_xmpp.js",
         "js/view_oauth.js",
         "js/socket_chrome.js",
         "js/storage_chrome.js",
