--- a/chrome/extension/src/manifest.json
+++ b/chrome/extension/src/manifest.json
@@ -3,6 +3,7 @@
   "version": "0.0.2",
   "manifest_version": 2,
   "description": "__MSG_appDescription__",
+  "minimum_chrome_version": "31",
   "icons": {
     "16": "common/ui/icons/uproxy-16.png",
     "19": "common/ui/icons/uproxy-19.png",
