Fixed bower dependancy resolution issue when including angular. Issue as described here: https://github.com/bower/bower/issues/866

--- a/common/ui/bower.json
+++ b/common/ui/bower.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "angular-mocks": "~v1.2.0-rc.2",
     "angular-scenario": "~v1.2.0-rc.2"
+  },
+  "resolutions": {
+    "angular": "1.2.0-rc.2"
   }
 }
