--- a/chrome/extension/src/manifest.json
+++ b/chrome/extension/src/manifest.json
@@ -16,6 +16,7 @@
       "scripts/freedom_connector.js",
       "common/ui/bower_components/json-patch/jsonpatch.js",
       "scripts/proxy-config.js",
+      "common/ui/scripts/ui.js",
       "scripts/background.js"
     ]
   },
