--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-jsvalidate": "~0.2.1",
+    "grunt-typescript": "",
     "grunt-spawn": "~1.0.41",
     "grunt-shell": "~0.3.1",
     "grunt-contrib-watch": "~0.5.3",
