--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "grunt-contrib-jshint": "~0.6.4",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-sass": "",
     "grunt-contrib-yuidoc": "~0.4.0",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-jsvalidate": "~0.2.1",
-    "grunt-typescript": "",
     "grunt-spawn": "~1.0.41",
     "grunt-shell": "~0.3.1",
+    "grunt-typescript": "",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-mozilla-addon-sdk": "rpl/grunt-mozilla-addon-sdk",
     "minimatch": "~0.2.12",
