refactor instance actions into its own angular controller, cleanups

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ uproxy.crx
 _SpecRunner.html
 common/ui/styles/.sass-cache
 common/ui/styles/main.css
+common/ui/scripts/ui.js
 tmp
 node_modules
 chrome/app/common
