move common/backend into common, begin uproxy.ts

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ uproxy.crx
 *.tar.gz
 *~
 _SpecRunner.html
+common/uproxy.js
 common/ui/styles/.sass-cache
 common/ui/styles/main.css
 common/ui/scripts/ui.js
@@ -24,6 +25,7 @@ tmp
 node_modules
 chrome/app/common
 chrome/extension/src/common
+chrome/extension/src/scripts/background.js
 common/ui/bower_components
 common/ui/lib
 firefox/data/common/
