--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "grunt-contrib-jasmine": "~0.5.2",
     "grunt-contrib-jshint": "~0.6.4",
     "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-compress": "~0.6.0",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-sass": "~0.6.0",
     "grunt-contrib-yuidoc": "~0.4.0",
