--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "grunt-mozilla-addon-sdk": "rpl/grunt-mozilla-addon-sdk",
     "minimatch": "~0.2.12",
     "glob": "~3.2.6",
-    "freedom": "~0.1.1"
+    "freedom": "0.1.0"
   },
   "scripts": {
     "test": "grunt --verbose"
