--- a/bower.json
+++ b/bower.json
@@ -1,16 +1,20 @@
 {
-  "name": "uProxy",
+  "name": "uProxy UI",
   "version": "0.1.4",
   "dependencies": {
-    "angular": "1.2.10",
-    "angular-animate": "1.2.10",
+    "angular": "1.2.0-rc.2",
+    "angular-animate": "1.2.0-rc.2",
     "angular-lodash": "https://github.com/cabrel/angular-lodash.git",
     "bootstrap-sass": "~2.3.1",
-    "lodash": "~1.3.1",
-    "json-patch": "~0.4.0"
+    "jsonpatch": "~v1.0.0-rc1",
+    "json-patch": "~0.4.0",
+    "lodash": "~1.3.1"
   },
   "devDependencies": {
-    "angular-mocks": "v1.2.10",
-    "angular-scenario": "v1.2.10"
+    "angular-mocks": "~v1.2.0-rc.2",
+    "angular-scenario": "~v1.2.0-rc.2"
+  },
+  "resolutions": {
+    "angular": "1.2.0-rc.2"
   }
 }
