--- a/src/chrome_extension/manifest.json
+++ b/src/chrome_extension/manifest.json
@@ -14,7 +14,7 @@
     "persistent": true,
     "scripts": [
       "scripts/ui.js",
-      "scripts/freedom_connector.js",
+      "scripts/core_stub.js",
       "lib/json-patch/jsonpatch.js",
       "scripts/proxy-config.js",
       "scripts/background.js"
