--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "devDependencies": {
     "glob": "~3.2.6",
     "grunt": "~0.4.2",
-    "grunt-contrib-jasmine": "~0.5.2",
+    "grunt-contrib-jasmine": "~0.6.1",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-compress": "~0.6.0",
     "grunt-contrib-clean": "~0.5.0",
@@ -21,14 +21,14 @@
     "grunt-contrib-yuidoc": "~0.4.0",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-typescript": "~0.2.7",
     "grunt-spawn": "~1.0.41",
     "grunt-shell": "~0.3.1",
-    "grunt-typescript": "~0.2.7",
-    "grunt-contrib-watch": "~0.5.3",
     "minimatch": "~0.2.12",
-    "socks-rtc": "~0.1.0",
-    "freedom": "~0.2.1",
-    "typescript": "0.9.5"
+    "socks-rtc": "~0.1.3",
+    "freedom-typescript-api": "~0.1.1",
+    "freedom-runtime-chrome": "~0.1.1"
   },
   "scripts": {
     "test": "grunt --verbose"
