move freedom-config to its own file

--- a/src/chrome_app/manifest.json
+++ b/src/chrome_app/manifest.json
@@ -18,8 +18,7 @@
         "js/auth_facebook.js",
         "js/auth_xmpp.js",
         "js/view_oauth.js",
-        "js/socket_chrome.js",
-        "js/storage_chrome.js",
+        "js/freedom-config.js",
         "js/plumbing.js",
         "js/background.js"
       ]
