--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "grunt-contrib-watch": "~0.5.3",
     "minimatch": "~0.2.12",
     "glob": "~3.2.6",
-    "typescript": "0.9.5",
+    "typescript": "~0.9.7",
     "freedom": "0.1.0"
   },
   "scripts": {
