--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "email" : "info@uproxy.org"
   },
   "devDependencies": {
+    "globule": "~0.2.0",
+    "glob": "~3.2.6",
     "grunt": "~0.4.2",
     "grunt-contrib-jasmine": "~0.5.2",
     "grunt-contrib-concat": "~0.3.0",
@@ -20,12 +22,13 @@
     "grunt-contrib-yuidoc": "~0.4.0",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-copy": "~0.4.1",
+    "grunt-lib-phantomjs": "~0.5.0",
     "grunt-spawn": "~1.0.41",
     "grunt-shell": "~0.3.1",
     "grunt-typescript": "~0.2.7",
     "grunt-contrib-watch": "~0.5.3",
     "minimatch": "~0.2.12",
-    "glob": "~3.2.6",
+    "rimraf": "~2.2.6",
     "typescript": "~0.9.7",
     "freedom": "0.1.0"
   },
