--- a/package.json
+++ b/package.json
@@ -11,28 +11,23 @@
     "email" : "info@uproxy.org"
   },
   "devDependencies": {
+    "es6-promise": "~0.1.1",
     "freedom": "~0.4.3",
     "freedom-for-chrome": "~0.1.2",
     "freedom-typescript-api": "~0.1.1",
     "glob": "~3.2.6",
-    "grunt": "~0.4.2",
-    "grunt-contrib-jasmine": "~0.6.1",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-compress": "~0.6.0",
     "globule": "~0.2.0",
+    "grunt": "~0.4.2",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-compress": "~0.6.0",
     "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-compress": "~0.6.0",
     "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-jasmine": "~0.5.2",
+    "grunt-contrib-jasmine": "~0.6.1",
     "grunt-contrib-sass": "~0.6.0",
     "grunt-contrib-uglify": "~0.2.2",
-    "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-typescript": "~0.2.7",
-    "grunt-spawn": "~1.0.41",
-    "grunt-shell": "~0.3.1",
     "grunt-contrib-yuidoc": "~0.4.0",
+    "grunt-lib-phantomjs": "~0.5.0",
     "grunt-lib-phantomjs": "~0.5.0",
     "grunt-shell": "~0.3.1",
     "grunt-spawn": "~1.0.41",
