tell travis about grunt. dont need separate test.sh when we can use npm test

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: node_js
 node_js:
   - "0.10"
 
-script:
-  - ./tools/test.sh
+before_install: npm install grunt -g grunt-cli
+install: npm install
 
 notifications:
   irc: "irc.freenode.net#uproxy"
