--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language: node_js
 node_js:
   - "0.10"
 
-before_install: npm install grunt -g grunt-cli
+before_install:
+  - npm install grunt -g grunt-cli
+  - gem install sass
 install: npm install
 
 notifications:
