--- a/src/chrome_extension/manifest.json
+++ b/src/chrome_extension/manifest.json
@@ -13,13 +13,13 @@
   "background": {
     "persistent": true,
     "scripts": [
+      "scripts/chrome_glue.js",
       "scripts/core_connector.js",
       "scripts/notify.js",
       "scripts/ui.js",
       "lib/json-patch/jsonpatch.js",
       "scripts/proxy-config.js",
-      "scripts/background.js",
-      "scripts/chrome_glue.js"
+      "scripts/background.js"
     ]
   },
   "browser_action": {
