--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "url": "https://github.com/UWNetworksLab/UProxy"
   },
   "bugs": {
-    "url": "http://github.com/uproxy/uproxy/issues",
-    "email": "info@uproxy.org"
+    "url" : "http://github.com/uproxy/uproxy/issues",
+    "email" : "info@uproxy.org"
   },
   "devDependencies": {
     "es6-promise": "~0.1.1",
     "freedom": "~0.4.3",
-    "freedom-for-chrome": "~0.1.2",
+    "freedom-social-xmpp": "~0.0.3",
+    "freedom-for-chrome": "~0.1.4",
     "freedom-typescript-api": "~0.1.1",
     "glob": "~3.2.6",
     "globule": "~0.2.0",
@@ -29,7 +30,6 @@
     "grunt-contrib-yuidoc": "~0.4.0",
     "grunt-lib-phantomjs": "~0.5.0",
     "grunt-shell": "~0.3.1",
-    "grunt-tsd": "^0.1.0",
     "grunt-typescript": "~0.2.7",
     "minimatch": "~0.2.12",
     "rimraf": "~2.2.6",
