upgrade to freedom 0.4.6

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "devDependencies": {
     "es6-promise": "~0.1.1",
-    "freedom": "0.4.4",
+    "freedom": "~0.4.6",
     "freedom-for-chrome": "~0.1.4",
     "freedom-social-xmpp": "~0.0.6",
     "freedom-typescript-api": "~0.1.1",
