--- a/src/chrome/extension/manifest.json
+++ b/src/chrome/extension/manifest.json
@@ -14,6 +14,7 @@
     "persistent": true,
     "scripts": [
       "scripts/chrome_glue.js",
+      "scripts/user.js",
       "scripts/ui.js",
       "scripts/notify.js",
       "scripts/proxy-config.js",
