use semver ^ instead of ~ in package.json

--- a/package.json
+++ b/package.json
@@ -11,32 +11,32 @@
     "email": "info@uproxy.org"
   },
   "devDependencies": {
-    "es6-promise": "~0.1.1",
-    "freedom": "~0.4.6",
-    "freedom-for-chrome": "~0.1.4",
-    "freedom-social-xmpp": "~0.0.9",
-    "freedom-typescript-api": "~0.1.7",
-    "glob": "~3.2.6",
-    "globule": "~0.2.0",
-    "grunt": "~0.4.2",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-compress": "~0.6.0",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-connect": "0.7.1",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-jasmine": "~0.6.1",
-    "grunt-contrib-sass": "~0.6.0",
-    "grunt-contrib-uglify": "~0.2.2",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-yuidoc": "~0.4.0",
-    "grunt-lib-phantomjs": "~0.5.0",
-    "grunt-shell": "~0.3.1",
+    "es6-promise": "^0.1.1",
+    "freedom": "^0.4.6",
+    "freedom-for-chrome": "^0.1.4",
+    "freedom-social-xmpp": "^0.0.9",
+    "freedom-typescript-api": "^0.1.7",
+    "glob": "^3.2.6",
+    "globule": "^0.2.0",
+    "grunt": "^0.4.2",
+    "grunt-contrib-clean": "^0.5.0",
+    "grunt-contrib-compress": "^0.6.0",
+    "grunt-contrib-concat": "^0.3.0",
+    "grunt-contrib-connect": "^0.7.1",
+    "grunt-contrib-copy": "^0.4.1",
+    "grunt-contrib-jasmine": "^0.6.1",
+    "grunt-contrib-sass": "^0.6.0",
+    "grunt-contrib-uglify": "^0.2.2",
+    "grunt-contrib-watch": "^0.5.3",
+    "grunt-contrib-yuidoc": "^0.4.0",
+    "grunt-lib-phantomjs": "^0.5.0",
+    "grunt-shell": "^0.3.1",
     "grunt-tsd": "^0.1.0",
-    "grunt-typescript": ">=0.3.6",
-    "minimatch": "~0.2.12",
-    "rimraf": "~2.2.6",
-    "socks-rtc": "~0.1.4",
-    "typescript": "~0.9.7"
+    "grunt-typescript": "^0.3.6",
+    "minimatch": "^0.2.12",
+    "rimraf": "^2.2.6",
+    "socks-rtc": "^0.1.4",
+    "typescript": "^0.9.7"
   },
   "scripts": {
     "test": "grunt test --verbose"
