Fix onUpdate handlers after multiple app/extension reconnections.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "devDependencies": {
     "es6-promise": "^0.1.1",
     "freedom": "^0.4.6",
-    "freedom-for-chrome": "^0.1.4",
+    "freedom-for-chrome": "0.1.5",
     "freedom-social-xmpp": "^0.0.10",
     "freedom-typescript-api": "^0.1.8",
     "glob": "^3.2.6",
