Add chrome notifications, fix tooltip, remove search toogle button

--- a/src/chrome/extension/manifest.json
+++ b/src/chrome/extension/manifest.json
@@ -33,6 +33,7 @@
     "storage",
     "identity",
     "proxy",
+    "notifications",
     "https://apis.google.com/"
   ],
   "options_page": "options.html",
