Cleanup: Changed "Uproxy" to "uProxy".

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.3.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/uProxy/UProxy"
+    "url": "https://github.com/uProxy/uProxy"
   },
   "bugs": {
     "url": "http://github.com/uproxy/uproxy/issues",
