--- a/src/firefox/package.json
+++ b/src/firefox/package.json
@@ -5,5 +5,9 @@
   "description": "a basic add-on",
   "author": "",
   "license": "MPL 2.0",
-  "version": "0.1"
+  "version": "0.1",
+  "permissions": {
+    "private-browsing": true,
+    "unsafe-content-script": true
+  }
 }
