start building out the peerconnection provider and rename the scratch sample app to freedomchat

--- a/samples/freedomchat/chrome/manifest.json
+++ b/samples/freedomchat/chrome/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
-  "name": "scratch",
-  "description": "Quick freedom-for-uproxy test.",
+  "name": "freedomchat",
+  "description": "uproxypeerconnection chat demo.",
   "version": "0.1",
   "app": {
     "background": {
