--- a/src/firefox/package.json
+++ b/src/firefox/package.json
@@ -2,7 +2,7 @@
   "name": "uproxy",
   "title": "uProxy",
   "id": "jid1-DhGl7eIwcjxVEQ",
-  "description": "a basic add-on",
+  "description": "Ubiquitous Proxy [Alpha]",
   "author": "",
   "license": "MPL 2.0",
   "version": "0.1",
