--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "angular-animate": "1.2.0-rc.2",
     "angular-lodash": "https://github.com/cabrel/angular-lodash.git",
     "bootstrap-sass": "~2.3.1",
-    "lodash": "~1.3.1"
+    "lodash": "~1.3.1",
+    "polymer": "~0.3.3"
   },
   "devDependencies": {
     "angular-mocks": "~v1.2.0-rc.2",
