--- a/src/chrome/extension/manifest.json
+++ b/src/chrome/extension/manifest.json
@@ -32,6 +32,7 @@
     "default_title": "__MSG_appName__",
     "default_popup": "polymer/popup.html"
   },
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
   "permissions": [
     "storage",
     "tabs",
