--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "minimatch": "~0.2.12",
     "rimraf": "^2.2.6",
     "typescript": "^1.0.1",
-    "uproxy-networking": "git://github.com/uproxy/uproxy-networking.git#dev"
+    "uproxy-networking": "^1.0.2",
+    "uproxy-lib": "^11.0.1"
   },
   "private": true,
   "scripts": {
