--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "url": "http://github.com/uproxy/uproxy/issues",
     "email": "info@uproxy.org"
   },
-  "licenses": [ {
-    "type": "Apache-2.0",
-    "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-  } ],
+  "licenses": [
+    {
+      "type": "Apache-2.0",
+      "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+    }
+  ],
   "devDependencies": {
     "es6-promise": "~0.1.1",
     "freedom-social-xmpp": "~1.0.1",
@@ -35,11 +37,12 @@
     "grunt-shell": "~0.3.1",
     "grunt-tsd": "~0.1.0",
     "grunt-typescript": "~0.3.6",
+    "grunt-verbosity": "^0.2.2",
     "minimatch": "~0.2.12",
     "rimraf": "^2.2.6",
     "typescript": "^1.0.1",
-    "uproxy-networking": "^1.0.2",
-    "uproxy-lib": "^11.0.1"
+    "uproxy-lib": "^11.0.1",
+    "uproxy-networking": "^1.0.2"
   },
   "private": true,
   "scripts": {
