--- a/bower.json
+++ b/bower.json
@@ -2,18 +2,9 @@
   "name": "uProxy",
   "version": "0.4.0",
   "dependencies": {
-    "angular": "1.2.0-rc.2",
-    "angular-animate": "1.2.0-rc.2",
-    "angular-lodash": "https://github.com/cabrel/angular-lodash.git",
     "bootstrap-sass": "~2.3.1",
     "lodash": "~1.3.1",
-    "polymer": "~0.3.3"
+    "polymer": "~0.4.0"
   },
-  "devDependencies": {
-    "angular-mocks": "~v1.2.0-rc.2",
-    "angular-scenario": "~v1.2.0-rc.2"
-  },
-  "resolutions": {
-    "angular": "1.2.0-rc.2"
-  }
+  "devDependencies": {}
 }
