include top level uproxy.ts in chrome extension so promise enum works

--- a/src/chrome/extension/manifest.json
+++ b/src/chrome/extension/manifest.json
@@ -14,6 +14,7 @@
     "persistent": true,
     "scripts": [
       "scripts/chrome_glue.js",
+      "scripts/uproxy.js",
       "scripts/user.js",
       "scripts/ui.js",
       "scripts/chrome_browser_action.js",
