include uproxy-churn for updated uproxy-networking

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "grunt-typescript": "~0.3.6",
     "grunt-verbosity": "^0.2.2",
     "typescript": "^1.0.1",
+    "uproxy-churn": "^0.0.5",
     "uproxy-lib": "^11.0.2",
     "uproxy-networking": "^1.2.0"
   },
