Git buddies to load, make proxying work again in core

--- a/src/chrome/app/manifest.json
+++ b/src/chrome/app/manifest.json
@@ -15,9 +15,7 @@
     }
   },
   "permissions": [
-    "storage",
-    "https://graph.facebook.com/oauth/access_token",
-    "https://accounts.google.com/o/oauth2/token"
+    "storage"
   ],
   "sockets": {
     "tcp": { "connect" : "" },
