--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .DS_Store
 .sass-cache
 .grunt
+.tscache
 *.swh
 *.swi
 *.swj
@@ -19,6 +20,7 @@
 *~
 build
 distr
+npm-debug.log
 tmp
 node_modules
 third_party/lib
