--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   ],
   "devDependencies": {
     "es6-promise": "^0.1.1",
-    "freedom-social-xmpp": "~1.0.1",
+    "freedom-social-xmpp": "~0.2.1",
     "grunt": "~0.4.2",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-compress": "~0.6.0",
@@ -31,12 +31,12 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-yuidoc": "~0.4.0",
     "grunt-shell": "~0.3.1",
-    "grunt-tsd": "~0.1.0",
-    "grunt-typescript": "~0.3.6",
+    "grunt-ts": "^1.11",
+    "typescript": "^1.1.0-1",
     "grunt-verbosity": "^0.2.2",
     "typescript": "^1.0.1",
     "uproxy-churn": "^0.0.5",
-    "uproxy-lib": "^11.0.2",
+    "uproxy-lib": "^13.0.0",
     "uproxy-networking": "^1.3.0"
   },
   "private": true,
