--- a/src/chrome/extension/manifest.json
+++ b/src/chrome/extension/manifest.json
@@ -42,6 +42,7 @@
     "notifications",
     "https://www.uproxy.org/oauth-redirect-uri*",
     "webRequest",
+    "webRequestBlocking",
     "https://graph.facebook.com/oauth/access_token",
     "https://accounts.google.com/o/oauth2/token"
   ],
