--- a/src/chrome/app/manifest.json
+++ b/src/chrome/app/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 2,
-  "name": "UProxyApp",
-  "description": "Ubiquitous Proxy [Alpha]",
+  "name": "uProxy Core App",
+  "description": "(Alpha version: do not use for real!) You need the uProxy Extension to actually use uProxy. uProxy Core App for Chrome provides underlying networking and storage features of uProxy. ",
   "minimum_chrome_version": "38",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "icons": {
       "128": "icons/uproxy-128.png",
       "19": "icons/uproxy-19.png",
