--- a/src/chrome/extension/manifest.json
+++ b/src/chrome/extension/manifest.json
@@ -37,6 +37,7 @@
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
   "permissions": [
     "tabs",
+    "activeTab",
     "proxy",
     "notifications",
     "https://www.uproxy.org/oauth-redirect-uri*",
