--- a/src/chrome/extension/manifest.json
+++ b/src/chrome/extension/manifest.json
@@ -34,7 +34,7 @@
     "default_title": "__MSG_appName__",
     "default_popup": "polymer/popup.html"
   },
-  "content_security_policy": "script-src 'self' 'unsafe-eval' 'unsafe-inline'; object-src 'self'",
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
   "permissions": [
     "tabs",
     "proxy",
