--- a/src/chrome/extension/manifest.json
+++ b/src/chrome/extension/manifest.json
@@ -5,9 +5,9 @@
   "description": "__MSG_appDescription__",
   "minimum_chrome_version": "38",
   "icons": {
-    "16": "icons/offline.png",
-    "19": "icons/offline.png",
-    "128": "icons/offline.png"
+    "16": "icons/default-16.png",
+    "19": "icons/default-19.png",
+    "128": "icons/default-128.png"
   },
   "default_locale": "en",
   "background": {
@@ -28,9 +28,7 @@
     ]
   },
   "browser_action": {
-    "default_icon": {
-      "19": "icons/offline.png"
-    },
+    "default_icon": "icons/offline-19.png",
     "default_title": "__MSG_appName__",
     "default_popup": "polymer/popup.html"
   },
