--- a/src/chrome/app/manifest.json
+++ b/src/chrome/app/manifest.json
@@ -5,9 +5,9 @@
   "minimum_chrome_version": "38",
   "version": "0.4.0",
   "icons": {
-      "128": "icons/uproxy-128.png",
-      "19": "icons/uproxy-19.png",
-      "16": "icons/uproxy-16.png"
+      "128": "icons/default-128.png",
+      "19": "icons/default-19.png",
+      "16": "icons/default-16.png"
   },
   "app": {
     "background": {
