--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,9 @@
   "dependencies": {
     "lodash": "~1.3.1",
     "polymer": "~0.5.1",
-    "paper-elements": "Polymer/paper-elements#~0.5.1"
+    "paper-elements": "Polymer/paper-elements#~0.5.1",
+    "core-input": "Polymer/core-input#^0.5.0",
+    "core-style": "Polymer/core-style#^0.5.0"
   },
   "devDependencies": {}
 }
