--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   "devDependencies": {
     "es6-promise": "^0.1.1",
     "freedom-social-facebook": "~0.0.5",
-    "freedom-social-xmpp": "~0.2.1",
-    "freedom-for-chrome": "~0.4.0",
-    "freedom-for-firefox": "~0.6.0",
+    "freedom-social-xmpp": "0.3.0",
+    "freedom-for-chrome": "0.4.5",
+    "freedom-for-firefox": "0.6.1",
     "fs-extra": "^0.12.0",
     "grunt": "~0.4.2",
     "grunt-contrib-clean": "~0.5.0",
