--- a/src/chrome/app/manifest.json
+++ b/src/chrome/app/manifest.json
@@ -1,9 +1,10 @@
 {
   "manifest_version": 2,
-  "name": "uProxy Core App",
-  "description": "(Alpha version: do not use for real!) You need the uProxy Extension to actually use uProxy. uProxy Core App for Chrome provides underlying networking and storage features of uProxy. ",
+  "name": "__MSG_appName__",
+  "description": "__MSG_appDescription__",
   "minimum_chrome_version": "38",
   "version": "0.4.0",
+  "default_locale": "en",
   "icons": {
       "128": "icons/default-128.png",
       "19": "icons/default-19.png",
