--- a/src/chrome/extension/manifest.json
+++ b/src/chrome/extension/manifest.json
@@ -29,7 +29,7 @@
   },
   "browser_action": {
     "default_icon": "icons/offline-19.png",
-    "default_title": "__MSG_appName__",
+    "default_title": "__MSG_appTitle__",
     "default_popup": "install-incomplete.html"
   },
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
