--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "grunt-contrib-yuidoc": "~0.4.0",
     "grunt-shell": "~0.3.1",
     "grunt-ts": "^1.11",
-    "typescript": "^1.1.0-1",
     "grunt-verbosity": "^0.2.2",
+    "grunt-vulcanize": "^0.6.0",
     "typescript": "^1.0.1",
     "uproxy-churn": "^0.0.5",
     "uproxy-lib": "^14.0.0",
