revert polymer version and keep prepublish

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "private": true,
   "scripts": {
-    "test": "grunt test --verbose"
+    "test": "grunt test --verbose",
+    "prepublish": "grunt test"
   }
 }
