--- a/src/chrome/app/manifest.json
+++ b/src/chrome/app/manifest.json
@@ -12,7 +12,7 @@
   },
   "app": {
     "background": {
-      "page": "uproxy.html"
+      "page": "background.html"
     }
   },
   "permissions": [
