--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   ],
   "devDependencies": {
     "es6-promise": "^0.1.1",
-    "freedom-social-xmpp": "0.3.5",
-    "freedom-for-chrome": "0.4.8",
-    "freedom-for-firefox": "0.6.6",
+    "freedom-social-xmpp": "~0.3.5",
+    "freedom-for-chrome": "~0.4.8",
+    "freedom-for-firefox": "~0.6.6",
     "fs-extra": "^0.12.0",
     "grunt": "~0.4.2",
     "grunt-contrib-clean": "~0.5.0",
