--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "grunt-contrib-connect": "~0.7.1",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-jasmine": "~0.6.1",
+    "grunt-template-jasmine-istanbul": "^0.3.0",
     "grunt-contrib-symlink": "~0.3.0",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-watch": "~0.5.3",
