--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     }
   ],
   "devDependencies": {
+    "async": "^0.9.0",
     "es6-promise": "^0.1.1",
     "freedom-social-xmpp": "~0.3.5",
     "freedom-for-chrome": "~0.4.8",
     "freedom-for-firefox": "~0.6.6",
     "fs-extra": "^0.12.0",
+    "glob": "^4.2.1",
     "grunt": "~0.4.2",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-compress": "~0.6.0",
@@ -41,7 +43,10 @@
     "typescript": "^1.0.1",
     "uproxy-churn": "^0.0.5",
     "uproxy-lib": "^17.0.0",
-    "uproxy-networking": "^5.0.0"
+    "uproxy-networking": "^5.0.0",
+    "selenium-standalone": "~2.44.0",
+    "wd": "~0.3.10",
+    "chalk": "~0.5.1"
   },
   "peerDependencies" : {
     "freedom": "~0.6.11"
