--- a/package.json
+++ b/package.json
@@ -17,13 +17,11 @@
     }
   ],
   "devDependencies": {
-    "async": "^0.9.0",
     "es6-promise": "^0.1.1",
     "freedom-social-xmpp": "~0.3.5",
     "freedom-for-chrome": "~0.4.8",
     "freedom-for-firefox": "~0.6.6",
     "fs-extra": "^0.12.0",
-    "glob": "^4.2.1",
     "grunt": "~0.4.2",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-compress": "~0.6.0",
@@ -36,6 +34,8 @@
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-yuidoc": "~0.4.0",
+    "grunt-jasmine-chromeapp": "~0.1.1",
+    "grunt-jasmine-node2": "^0.4.0",
     "grunt-shell": "~0.3.1",
     "grunt-ts": "^1.11",
     "grunt-verbosity": "^0.2.2",
@@ -43,10 +43,7 @@
     "typescript": "^1.0.1",
     "uproxy-churn": "^0.0.5",
     "uproxy-lib": "^17.0.0",
-    "uproxy-networking": "^5.0.0",
-    "selenium-standalone": "~2.44.0",
-    "wd": "~0.3.10",
-    "chalk": "~0.5.1"
+    "uproxy-networking": "^5.0.0"
   },
   "peerDependencies" : {
     "freedom": "~0.6.11"
