--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-yuidoc": "~0.4.0",
-    "grunt-jasmine-chromeapp": "~0.1.1",
+    "grunt-jasmine-chromeapp": "0.1.1",
     "grunt-jasmine-node2": "^0.4.0",
     "grunt-shell": "~0.3.1",
     "grunt-ts": "^1.11",
