--- a/src/chrome/extension/manifest.json
+++ b/src/chrome/extension/manifest.json
@@ -24,7 +24,7 @@
     ]
   },
   "browser_action": {
-    "default_icon": "icons/offline-19.png",
+    "default_icon": "icons/NotLoggedIn_32.gif",
     "default_title": "__MSG_extTitle__"
   },
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
