--- a/src/chrome/app/manifest.json
+++ b/src/chrome/app/manifest.json
@@ -6,9 +6,9 @@
   "version": "0.6.0",
   "default_locale": "en",
   "icons": {
-      "128": "icons/default-128.png",
-      "19": "icons/default-19.png",
-      "16": "icons/default-16.png"
+      "128": "icons/LoggedIn_256.gif",
+      "19": "icons/LoggedIn_38.gif",
+      "16": "icons/LoggedIn_32.gif"
   },
   "app": {
     "background": {
