--- a/src/chrome/extension/manifest.json
+++ b/src/chrome/extension/manifest.json
@@ -5,9 +5,9 @@
   "description": "__MSG_extDescription__",
   "minimum_chrome_version": "41.0.2267",
   "icons": {
-    "16": "icons/default-16.png",
-    "19": "icons/default-19.png",
-    "128": "icons/default-128.png"
+    "16": "icons/LoggedIn_32.gif",
+    "19": "icons/LoggedIn_38.gif",
+    "128": "icons/LoggedIn_256.gif"
   },
   "default_locale": "en",
   "background": {
