--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "freedom-for-chrome": "~0.4.11",
     "freedom-for-firefox": "~0.6.7",
     "fs-extra": "^0.12.0",
-    "grunt": "~0.4.2",
+    "grunt": "0.4.2",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-compress": "~0.6.0",
     "grunt-contrib-concat": "~0.3.0",
@@ -34,7 +34,7 @@
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-yuidoc": "~0.4.0",
-    "grunt-jasmine-chromeapp": "0.1.1",
+    "grunt-jasmine-chromeapp": "1.6.0",
     "grunt-jasmine-node2": "^0.4.0",
     "grunt-shell": "~0.3.1",
     "grunt-ts": "^1.11",
