--- a/src/chrome/extension/manifest.json
+++ b/src/chrome/extension/manifest.json
@@ -5,7 +5,7 @@
   "description": "__MSG_extDescription__",
   "minimum_chrome_version": "41.0.2267",
   "icons": {
-    "128": "icons/Default_128.png"
+    "128": "icons/128_online.png"
   },
   "default_locale": "en",
   "background": {
@@ -22,7 +22,10 @@
     ]
   },
   "browser_action": {
-    "default_icon": "icons/NotLoggedIn_32.gif",
+    "default_icon": {
+      "19": "icons/19_offline.gif",
+      "38": "icons/38_offline.gif"
+    },
     "default_title": "__MSG_extTitle__"
   },
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
