--- a/package.json
+++ b/package.json
@@ -49,6 +49,6 @@
   "private": true,
   "scripts": {
     "test": "grunt test --verbose",
-    "prepublish": "bower install && grunt test"
+    "prepublish": "grunt test"
   }
 }
