add nvm command

--- a/.shippable.yml
+++ b/.shippable.yml
@@ -11,6 +11,7 @@ notifications:
 before_install:
   - "export DISPLAY=:10.0"
   - "Xvfb :10 -screen 0 1280x1024x24 &"
+  - "source ~/.nvm/nvm.sh"
   - "npm install -g bower"
 install:
   - "google-chrome --version"
