Remove nvm, rearrange, add --allow-root flag

--- a/.shippable.yml
+++ b/.shippable.yml
@@ -11,12 +11,11 @@ notifications:
 before_install:
   - "export DISPLAY=:10.0"
   - "Xvfb :10 -screen 0 1280x1024x24 &"
-  - "source ~/.nvm/nvm.sh"
-  - "npm install -g bower"
-install:
   - "google-chrome --version"
   - "firefox -v"
-  - "bower install"
+install:
+  - "npm install -g bower"
+  - "bower install --allow-root"
   - "shippable_retry npm install"
 script:
   - "grunt test"
