Remove prepublish script

--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
   },
   "private": true,
   "scripts": {
-    "test": "grunt test --verbose",
-    "prepublish": "grunt test"
+    "test": "grunt test --verbose"
   }
 }
