--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: node_js
 node_js:
   - "0.11"
   - "0.10"
-before_install:
+install:
   - npm install grunt -g grunt-cli
   - npm install -g bower
+  - bower install --allow-root
+script:
+  - grunt test --verbose
