--- a/package.json
+++ b/package.json
@@ -46,8 +46,5 @@
   "peerDependencies" : {
     "freedom": "~0.6.18"
   },
-  "private": true,
-  "scripts": {
-    "test": "grunt test --verbose"
-  }
+  "private": true
 }
