--- a/src/chrome/extension/manifest.json
+++ b/src/chrome/extension/manifest.json
@@ -23,8 +23,8 @@
   },
   "browser_action": {
     "default_icon": {
-      "19": "icons/19_offline.gif",
-      "38": "icons/38_offline.gif"
+      "19": "icons/19_error.png",
+      "38": "icons/19_error.png"
     },
     "default_title": "__MSG_extTitle__"
   },
